Finalizando o desenvolvimento do Front-End

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,10 +4,10 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a routerLink="palestrante/create" class="nav-link" routerLinkActive="active">Adicionar Palestrante</a>
+        <a routerLink="funcionario/create" class="nav-link" routerLinkActive="active">Adicionar Funcionario</a>
       </li>
       <li class="nav-item">
-        <a routerLink="palestrante" class="nav-link" routerLinkActive="active">Palestrantes</a>
+        <a routerLink="funcionario" class="nav-link" routerLinkActive="active">Funcionários</a>
       </li>
     </ul>
   </div>
